--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "pinia": "^2.0.12",
     "vue": "^3.2.25",
     "vue-router": "^4.0.14"
   },
