--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,6 +38,9 @@ jobs:
       - name: Install dependencies 👨🏻‍💻
         run: npm ci --prefer-offline --no-audit
 
+      - name: Run linter 👀
+        run: npm run build
+
       - name: Deploy to Server 🚀
         uses: easingthemes/ssh-deploy@main
         env:
