--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "pinia": "^2.0.12",
+    "swiper": "^8.0.7",
     "vue": "^3.2.25",
     "vue-router": "^4.0.14"
   },
