--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vueuse/core": "^8.1.2",
     "pinia": "^2.0.12",
     "swiper": "^8.0.7",
     "vue": "^3.2.25",
