--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@vueuse/head": "^0.7.5",
     "@vueuse/integrations": "^8.1.2",
     "focus-trap": "^6.7.3",
+    "maska": "^1.5.0",
     "pinia": "^2.0.12",
     "swiper": "^8.0.7",
     "vue": "^3.2.25",
