--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.2.0",
+    "fast-glob": "^3.2.11",
     "pug": "^3.0.2",
     "sass": "^1.49.9",
-    "vite": "^2.8.0"
+    "vite": "^2.8.0",
+    "vite-plugin-svg-icons": "^2.0.1"
   }
 }
